cmake_minimum_required(VERSION 3.23)
project(SHENRemaster)

set(CMAKE_CXX_STANDARD 14)

add_library(glfw3 STATIC IMPORTED GLOBAL)
set_property(TARGET glfw3 APPEND PROPERTY IMPORTED_CONFIGURATIONS DEBUG)
set_target_properties(glfw3 PROPERTIES
        IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "CXX"
        IMPORTED_LOCATION_DEBUG "Libraries/lib/glfw3.lib")

include_directories(Libraries/include)
include_directories(SHENRemaster)


add_executable(SHENRemaster
        Libraries/include/glad/glad.h
        Libraries/include/GLFW/glfw3.h
        Libraries/include/GLFW/glfw3native.h
        Libraries/include/glm/detail/_features.hpp
        Libraries/include/glm/detail/_fixes.hpp
        Libraries/include/glm/detail/_noise.hpp
        Libraries/include/glm/detail/_swizzle.hpp
        Libraries/include/glm/detail/_swizzle_func.hpp
        Libraries/include/glm/detail/_vectorize.hpp
        Libraries/include/glm/detail/compute_common.hpp
        Libraries/include/glm/detail/compute_vector_relational.hpp
        Libraries/include/glm/detail/func_common.inl
        Libraries/include/glm/detail/func_common_simd.inl
        Libraries/include/glm/detail/func_exponential.inl
        Libraries/include/glm/detail/func_exponential_simd.inl
        Libraries/include/glm/detail/func_geometric.inl
        Libraries/include/glm/detail/func_geometric_simd.inl
        Libraries/include/glm/detail/func_integer.inl
        Libraries/include/glm/detail/func_integer_simd.inl
        Libraries/include/glm/detail/func_matrix.inl
        Libraries/include/glm/detail/func_matrix_simd.inl
        Libraries/include/glm/detail/func_packing.inl
        Libraries/include/glm/detail/func_packing_simd.inl
        Libraries/include/glm/detail/func_trigonometric.inl
        Libraries/include/glm/detail/func_trigonometric_simd.inl
        Libraries/include/glm/detail/func_vector_relational.inl
        Libraries/include/glm/detail/func_vector_relational_simd.inl
        Libraries/include/glm/detail/glm.cpp
        Libraries/include/glm/detail/qualifier.hpp
        Libraries/include/glm/detail/setup.hpp
        Libraries/include/glm/detail/type_float.hpp
        Libraries/include/glm/detail/type_half.hpp
        Libraries/include/glm/detail/type_half.inl
        Libraries/include/glm/detail/type_mat2x2.hpp
        Libraries/include/glm/detail/type_mat2x2.inl
        Libraries/include/glm/detail/type_mat2x3.hpp
        Libraries/include/glm/detail/type_mat2x3.inl
        Libraries/include/glm/detail/type_mat2x4.hpp
        Libraries/include/glm/detail/type_mat2x4.inl
        Libraries/include/glm/detail/type_mat3x2.hpp
        Libraries/include/glm/detail/type_mat3x2.inl
        Libraries/include/glm/detail/type_mat3x3.hpp
        Libraries/include/glm/detail/type_mat3x3.inl
        Libraries/include/glm/detail/type_mat3x4.hpp
        Libraries/include/glm/detail/type_mat3x4.inl
        Libraries/include/glm/detail/type_mat4x2.hpp
        Libraries/include/glm/detail/type_mat4x2.inl
        Libraries/include/glm/detail/type_mat4x3.hpp
        Libraries/include/glm/detail/type_mat4x3.inl
        Libraries/include/glm/detail/type_mat4x4.hpp
        Libraries/include/glm/detail/type_mat4x4.inl
        Libraries/include/glm/detail/type_mat4x4_simd.inl
        Libraries/include/glm/detail/type_quat.hpp
        Libraries/include/glm/detail/type_quat.inl
        Libraries/include/glm/detail/type_quat_simd.inl
        Libraries/include/glm/detail/type_vec1.hpp
        Libraries/include/glm/detail/type_vec1.inl
        Libraries/include/glm/detail/type_vec2.hpp
        Libraries/include/glm/detail/type_vec2.inl
        Libraries/include/glm/detail/type_vec3.hpp
        Libraries/include/glm/detail/type_vec3.inl
        Libraries/include/glm/detail/type_vec4.hpp
        Libraries/include/glm/detail/type_vec4.inl
        Libraries/include/glm/detail/type_vec4_simd.inl
        Libraries/include/glm/ext/matrix_clip_space.hpp
        Libraries/include/glm/ext/matrix_clip_space.inl
        Libraries/include/glm/ext/matrix_common.hpp
        Libraries/include/glm/ext/matrix_common.inl
        Libraries/include/glm/ext/matrix_double2x2.hpp
        Libraries/include/glm/ext/matrix_double2x2_precision.hpp
        Libraries/include/glm/ext/matrix_double2x3.hpp
        Libraries/include/glm/ext/matrix_double2x3_precision.hpp
        Libraries/include/glm/ext/matrix_double2x4.hpp
        Libraries/include/glm/ext/matrix_double2x4_precision.hpp
        Libraries/include/glm/ext/matrix_double3x2.hpp
        Libraries/include/glm/ext/matrix_double3x2_precision.hpp
        Libraries/include/glm/ext/matrix_double3x3.hpp
        Libraries/include/glm/ext/matrix_double3x3_precision.hpp
        Libraries/include/glm/ext/matrix_double3x4.hpp
        Libraries/include/glm/ext/matrix_double3x4_precision.hpp
        Libraries/include/glm/ext/matrix_double4x2.hpp
        Libraries/include/glm/ext/matrix_double4x2_precision.hpp
        Libraries/include/glm/ext/matrix_double4x3.hpp
        Libraries/include/glm/ext/matrix_double4x3_precision.hpp
        Libraries/include/glm/ext/matrix_double4x4.hpp
        Libraries/include/glm/ext/matrix_double4x4_precision.hpp
        Libraries/include/glm/ext/matrix_float2x2.hpp
        Libraries/include/glm/ext/matrix_float2x2_precision.hpp
        Libraries/include/glm/ext/matrix_float2x3.hpp
        Libraries/include/glm/ext/matrix_float2x3_precision.hpp
        Libraries/include/glm/ext/matrix_float2x4.hpp
        Libraries/include/glm/ext/matrix_float2x4_precision.hpp
        Libraries/include/glm/ext/matrix_float3x2.hpp
        Libraries/include/glm/ext/matrix_float3x2_precision.hpp
        Libraries/include/glm/ext/matrix_float3x3.hpp
        Libraries/include/glm/ext/matrix_float3x3_precision.hpp
        Libraries/include/glm/ext/matrix_float3x4.hpp
        Libraries/include/glm/ext/matrix_float3x4_precision.hpp
        Libraries/include/glm/ext/matrix_float4x2.hpp
        Libraries/include/glm/ext/matrix_float4x2_precision.hpp
        Libraries/include/glm/ext/matrix_float4x3.hpp
        Libraries/include/glm/ext/matrix_float4x3_precision.hpp
        Libraries/include/glm/ext/matrix_float4x4.hpp
        Libraries/include/glm/ext/matrix_float4x4_precision.hpp
        Libraries/include/glm/ext/matrix_projection.hpp
        Libraries/include/glm/ext/matrix_projection.inl
        Libraries/include/glm/ext/matrix_relational.hpp
        Libraries/include/glm/ext/matrix_relational.inl
        Libraries/include/glm/ext/matrix_transform.hpp
        Libraries/include/glm/ext/matrix_transform.inl
        Libraries/include/glm/ext/quaternion_common.hpp
        Libraries/include/glm/ext/quaternion_common.inl
        Libraries/include/glm/ext/quaternion_common_simd.inl
        Libraries/include/glm/ext/quaternion_double.hpp
        Libraries/include/glm/ext/quaternion_double_precision.hpp
        Libraries/include/glm/ext/quaternion_exponential.hpp
        Libraries/include/glm/ext/quaternion_exponential.inl
        Libraries/include/glm/ext/quaternion_float.hpp
        Libraries/include/glm/ext/quaternion_float_precision.hpp
        Libraries/include/glm/ext/quaternion_geometric.hpp
        Libraries/include/glm/ext/quaternion_geometric.inl
        Libraries/include/glm/ext/quaternion_relational.hpp
        Libraries/include/glm/ext/quaternion_relational.inl
        Libraries/include/glm/ext/quaternion_transform.hpp
        Libraries/include/glm/ext/quaternion_transform.inl
        Libraries/include/glm/ext/quaternion_trigonometric.hpp
        Libraries/include/glm/ext/quaternion_trigonometric.inl
        Libraries/include/glm/ext/scalar_common.hpp
        Libraries/include/glm/ext/scalar_common.inl
        Libraries/include/glm/ext/scalar_constants.hpp
        Libraries/include/glm/ext/scalar_constants.inl
        Libraries/include/glm/ext/scalar_int_sized.hpp
        Libraries/include/glm/ext/scalar_integer.hpp
        Libraries/include/glm/ext/scalar_integer.inl
        Libraries/include/glm/ext/scalar_relational.hpp
        Libraries/include/glm/ext/scalar_relational.inl
        Libraries/include/glm/ext/scalar_uint_sized.hpp
        Libraries/include/glm/ext/scalar_ulp.hpp
        Libraries/include/glm/ext/scalar_ulp.inl
        Libraries/include/glm/ext/vector_bool1.hpp
        Libraries/include/glm/ext/vector_bool1_precision.hpp
        Libraries/include/glm/ext/vector_bool2.hpp
        Libraries/include/glm/ext/vector_bool2_precision.hpp
        Libraries/include/glm/ext/vector_bool3.hpp
        Libraries/include/glm/ext/vector_bool3_precision.hpp
        Libraries/include/glm/ext/vector_bool4.hpp
        Libraries/include/glm/ext/vector_bool4_precision.hpp
        Libraries/include/glm/ext/vector_common.hpp
        Libraries/include/glm/ext/vector_common.inl
        Libraries/include/glm/ext/vector_double1.hpp
        Libraries/include/glm/ext/vector_double1_precision.hpp
        Libraries/include/glm/ext/vector_double2.hpp
        Libraries/include/glm/ext/vector_double2_precision.hpp
        Libraries/include/glm/ext/vector_double3.hpp
        Libraries/include/glm/ext/vector_double3_precision.hpp
        Libraries/include/glm/ext/vector_double4.hpp
        Libraries/include/glm/ext/vector_double4_precision.hpp
        Libraries/include/glm/ext/vector_float1.hpp
        Libraries/include/glm/ext/vector_float1_precision.hpp
        Libraries/include/glm/ext/vector_float2.hpp
        Libraries/include/glm/ext/vector_float2_precision.hpp
        Libraries/include/glm/ext/vector_float3.hpp
        Libraries/include/glm/ext/vector_float3_precision.hpp
        Libraries/include/glm/ext/vector_float4.hpp
        Libraries/include/glm/ext/vector_float4_precision.hpp
        Libraries/include/glm/ext/vector_int1.hpp
        Libraries/include/glm/ext/vector_int1_precision.hpp
        Libraries/include/glm/ext/vector_int2.hpp
        Libraries/include/glm/ext/vector_int2_precision.hpp
        Libraries/include/glm/ext/vector_int3.hpp
        Libraries/include/glm/ext/vector_int3_precision.hpp
        Libraries/include/glm/ext/vector_int4.hpp
        Libraries/include/glm/ext/vector_int4_precision.hpp
        Libraries/include/glm/ext/vector_integer.hpp
        Libraries/include/glm/ext/vector_integer.inl
        Libraries/include/glm/ext/vector_relational.hpp
        Libraries/include/glm/ext/vector_relational.inl
        Libraries/include/glm/ext/vector_uint1.hpp
        Libraries/include/glm/ext/vector_uint1_precision.hpp
        Libraries/include/glm/ext/vector_uint2.hpp
        Libraries/include/glm/ext/vector_uint2_precision.hpp
        Libraries/include/glm/ext/vector_uint3.hpp
        Libraries/include/glm/ext/vector_uint3_precision.hpp
        Libraries/include/glm/ext/vector_uint4.hpp
        Libraries/include/glm/ext/vector_uint4_precision.hpp
        Libraries/include/glm/ext/vector_ulp.hpp
        Libraries/include/glm/ext/vector_ulp.inl
        Libraries/include/glm/gtc/bitfield.hpp
        Libraries/include/glm/gtc/bitfield.inl
        Libraries/include/glm/gtc/color_space.hpp
        Libraries/include/glm/gtc/color_space.inl
        Libraries/include/glm/gtc/constants.hpp
        Libraries/include/glm/gtc/constants.inl
        Libraries/include/glm/gtc/epsilon.hpp
        Libraries/include/glm/gtc/epsilon.inl
        Libraries/include/glm/gtc/integer.hpp
        Libraries/include/glm/gtc/integer.inl
        Libraries/include/glm/gtc/matrix_access.hpp
        Libraries/include/glm/gtc/matrix_access.inl
        Libraries/include/glm/gtc/matrix_integer.hpp
        Libraries/include/glm/gtc/matrix_inverse.hpp
        Libraries/include/glm/gtc/matrix_inverse.inl
        Libraries/include/glm/gtc/matrix_transform.hpp
        Libraries/include/glm/gtc/matrix_transform.inl
        Libraries/include/glm/gtc/noise.hpp
        Libraries/include/glm/gtc/noise.inl
        Libraries/include/glm/gtc/packing.hpp
        Libraries/include/glm/gtc/packing.inl
        Libraries/include/glm/gtc/quaternion.hpp
        Libraries/include/glm/gtc/quaternion.inl
        Libraries/include/glm/gtc/quaternion_simd.inl
        Libraries/include/glm/gtc/random.hpp
        Libraries/include/glm/gtc/random.inl
        Libraries/include/glm/gtc/reciprocal.hpp
        Libraries/include/glm/gtc/reciprocal.inl
        Libraries/include/glm/gtc/round.hpp
        Libraries/include/glm/gtc/round.inl
        Libraries/include/glm/gtc/type_aligned.hpp
        Libraries/include/glm/gtc/type_precision.hpp
        Libraries/include/glm/gtc/type_precision.inl
        Libraries/include/glm/gtc/type_ptr.hpp
        Libraries/include/glm/gtc/type_ptr.inl
        Libraries/include/glm/gtc/ulp.hpp
        Libraries/include/glm/gtc/ulp.inl
        Libraries/include/glm/gtc/vec1.hpp
        Libraries/include/glm/gtx/associated_min_max.hpp
        Libraries/include/glm/gtx/associated_min_max.inl
        Libraries/include/glm/gtx/bit.hpp
        Libraries/include/glm/gtx/bit.inl
        Libraries/include/glm/gtx/closest_point.hpp
        Libraries/include/glm/gtx/closest_point.inl
        Libraries/include/glm/gtx/color_encoding.hpp
        Libraries/include/glm/gtx/color_encoding.inl
        Libraries/include/glm/gtx/color_space.hpp
        Libraries/include/glm/gtx/color_space.inl
        Libraries/include/glm/gtx/color_space_YCoCg.hpp
        Libraries/include/glm/gtx/color_space_YCoCg.inl
        Libraries/include/glm/gtx/common.hpp
        Libraries/include/glm/gtx/common.inl
        Libraries/include/glm/gtx/compatibility.hpp
        Libraries/include/glm/gtx/compatibility.inl
        Libraries/include/glm/gtx/component_wise.hpp
        Libraries/include/glm/gtx/component_wise.inl
        Libraries/include/glm/gtx/dual_quaternion.hpp
        Libraries/include/glm/gtx/dual_quaternion.inl
        Libraries/include/glm/gtx/easing.hpp
        Libraries/include/glm/gtx/easing.inl
        Libraries/include/glm/gtx/euler_angles.hpp
        Libraries/include/glm/gtx/euler_angles.inl
        Libraries/include/glm/gtx/extend.hpp
        Libraries/include/glm/gtx/extend.inl
        Libraries/include/glm/gtx/extended_min_max.hpp
        Libraries/include/glm/gtx/extended_min_max.inl
        Libraries/include/glm/gtx/exterior_product.hpp
        Libraries/include/glm/gtx/exterior_product.inl
        Libraries/include/glm/gtx/fast_exponential.hpp
        Libraries/include/glm/gtx/fast_exponential.inl
        Libraries/include/glm/gtx/fast_square_root.hpp
        Libraries/include/glm/gtx/fast_square_root.inl
        Libraries/include/glm/gtx/fast_trigonometry.hpp
        Libraries/include/glm/gtx/fast_trigonometry.inl
        Libraries/include/glm/gtx/float_notmalize.inl
        Libraries/include/glm/gtx/functions.hpp
        Libraries/include/glm/gtx/functions.inl
        Libraries/include/glm/gtx/gradient_paint.hpp
        Libraries/include/glm/gtx/gradient_paint.inl
        Libraries/include/glm/gtx/handed_coordinate_space.hpp
        Libraries/include/glm/gtx/handed_coordinate_space.inl
        Libraries/include/glm/gtx/hash.hpp
        Libraries/include/glm/gtx/hash.inl
        Libraries/include/glm/gtx/integer.hpp
        Libraries/include/glm/gtx/integer.inl
        Libraries/include/glm/gtx/intersect.hpp
        Libraries/include/glm/gtx/intersect.inl
        Libraries/include/glm/gtx/io.hpp
        Libraries/include/glm/gtx/io.inl
        Libraries/include/glm/gtx/log_base.hpp
        Libraries/include/glm/gtx/log_base.inl
        Libraries/include/glm/gtx/matrix_cross_product.hpp
        Libraries/include/glm/gtx/matrix_cross_product.inl
        Libraries/include/glm/gtx/matrix_decompose.hpp
        Libraries/include/glm/gtx/matrix_decompose.inl
        Libraries/include/glm/gtx/matrix_factorisation.hpp
        Libraries/include/glm/gtx/matrix_factorisation.inl
        Libraries/include/glm/gtx/matrix_interpolation.hpp
        Libraries/include/glm/gtx/matrix_interpolation.inl
        Libraries/include/glm/gtx/matrix_major_storage.hpp
        Libraries/include/glm/gtx/matrix_major_storage.inl
        Libraries/include/glm/gtx/matrix_operation.hpp
        Libraries/include/glm/gtx/matrix_operation.inl
        Libraries/include/glm/gtx/matrix_query.hpp
        Libraries/include/glm/gtx/matrix_query.inl
        Libraries/include/glm/gtx/matrix_transform_2d.hpp
        Libraries/include/glm/gtx/matrix_transform_2d.inl
        Libraries/include/glm/gtx/mixed_product.hpp
        Libraries/include/glm/gtx/mixed_product.inl
        Libraries/include/glm/gtx/norm.hpp
        Libraries/include/glm/gtx/norm.inl
        Libraries/include/glm/gtx/normal.hpp
        Libraries/include/glm/gtx/normal.inl
        Libraries/include/glm/gtx/normalize_dot.hpp
        Libraries/include/glm/gtx/normalize_dot.inl
        Libraries/include/glm/gtx/number_precision.hpp
        Libraries/include/glm/gtx/number_precision.inl
        Libraries/include/glm/gtx/optimum_pow.hpp
        Libraries/include/glm/gtx/optimum_pow.inl
        Libraries/include/glm/gtx/orthonormalize.hpp
        Libraries/include/glm/gtx/orthonormalize.inl
        Libraries/include/glm/gtx/perpendicular.hpp
        Libraries/include/glm/gtx/perpendicular.inl
        Libraries/include/glm/gtx/polar_coordinates.hpp
        Libraries/include/glm/gtx/polar_coordinates.inl
        Libraries/include/glm/gtx/projection.hpp
        Libraries/include/glm/gtx/projection.inl
        Libraries/include/glm/gtx/quaternion.hpp
        Libraries/include/glm/gtx/quaternion.inl
        Libraries/include/glm/gtx/range.hpp
        Libraries/include/glm/gtx/raw_data.hpp
        Libraries/include/glm/gtx/raw_data.inl
        Libraries/include/glm/gtx/rotate_normalized_axis.hpp
        Libraries/include/glm/gtx/rotate_normalized_axis.inl
        Libraries/include/glm/gtx/rotate_vector.hpp
        Libraries/include/glm/gtx/rotate_vector.inl
        Libraries/include/glm/gtx/scalar_multiplication.hpp
        Libraries/include/glm/gtx/scalar_relational.hpp
        Libraries/include/glm/gtx/scalar_relational.inl
        Libraries/include/glm/gtx/spline.hpp
        Libraries/include/glm/gtx/spline.inl
        Libraries/include/glm/gtx/std_based_type.hpp
        Libraries/include/glm/gtx/std_based_type.inl
        Libraries/include/glm/gtx/string_cast.hpp
        Libraries/include/glm/gtx/string_cast.inl
        Libraries/include/glm/gtx/texture.hpp
        Libraries/include/glm/gtx/texture.inl
        Libraries/include/glm/gtx/transform.hpp
        Libraries/include/glm/gtx/transform.inl
        Libraries/include/glm/gtx/transform2.hpp
        Libraries/include/glm/gtx/transform2.inl
        Libraries/include/glm/gtx/type_aligned.hpp
        Libraries/include/glm/gtx/type_aligned.inl
        Libraries/include/glm/gtx/type_trait.hpp
        Libraries/include/glm/gtx/type_trait.inl
        Libraries/include/glm/gtx/vec_swizzle.hpp
        Libraries/include/glm/gtx/vector_angle.hpp
        Libraries/include/glm/gtx/vector_angle.inl
        Libraries/include/glm/gtx/vector_query.hpp
        Libraries/include/glm/gtx/vector_query.inl
        Libraries/include/glm/gtx/wrap.hpp
        Libraries/include/glm/gtx/wrap.inl
        Libraries/include/glm/simd/common.h
        Libraries/include/glm/simd/exponential.h
        Libraries/include/glm/simd/geometric.h
        Libraries/include/glm/simd/integer.h
        Libraries/include/glm/simd/matrix.h
        Libraries/include/glm/simd/neon.h
        Libraries/include/glm/simd/packing.h
        Libraries/include/glm/simd/platform.h
        Libraries/include/glm/simd/trigonometric.h
        Libraries/include/glm/simd/vector_relational.h
        Libraries/include/glm/common.hpp
        Libraries/include/glm/exponential.hpp
        Libraries/include/glm/ext.hpp
        Libraries/include/glm/fwd.hpp
        Libraries/include/glm/geometric.hpp
        Libraries/include/glm/glm.hpp
        Libraries/include/glm/integer.hpp
        Libraries/include/glm/mat2x2.hpp
        Libraries/include/glm/mat2x3.hpp
        Libraries/include/glm/mat2x4.hpp
        Libraries/include/glm/mat3x2.hpp
        Libraries/include/glm/mat3x3.hpp
        Libraries/include/glm/mat3x4.hpp
        Libraries/include/glm/mat4x2.hpp
        Libraries/include/glm/mat4x3.hpp
        Libraries/include/glm/mat4x4.hpp
        Libraries/include/glm/matrix.hpp
        Libraries/include/glm/packing.hpp
        Libraries/include/glm/trigonometric.hpp
        Libraries/include/glm/vec2.hpp
        Libraries/include/glm/vec3.hpp
        Libraries/include/glm/vec4.hpp
        Libraries/include/glm/vector_relational.hpp
        Libraries/include/imgui/imconfig.h
        Libraries/include/imgui/imgui.cpp
        Libraries/include/imgui/imgui.h
        Libraries/include/imgui/imgui_demo.cpp
        Libraries/include/imgui/imgui_draw.cpp
        Libraries/include/imgui/imgui_impl_glfw.cpp
        Libraries/include/imgui/imgui_impl_glfw.h
        Libraries/include/imgui/imgui_impl_opengl3.cpp
        Libraries/include/imgui/imgui_impl_opengl3.h
        Libraries/include/imgui/imgui_impl_opengl3_loader.h
        Libraries/include/imgui/imgui_internal.h
        Libraries/include/imgui/imgui_tables.cpp
        Libraries/include/imgui/imgui_widgets.cpp
        Libraries/include/imgui/imstb_rectpack.h
        Libraries/include/imgui/imstb_textedit.h
        Libraries/include/imgui/imstb_truetype.h
        Libraries/include/json/json.hpp
        Libraries/include/KHR/khrplatform.h
        Libraries/include/stb/stb_image.h
        SHENRemaster/Camera.cpp
        SHENRemaster/Camera.h
        SHENRemaster/CleriaGame.cpp
        SHENRemaster/EBO.cpp
        SHENRemaster/EBO.h
        SHENRemaster/Game.h
        SHENRemaster/glad.c
        SHENRemaster/GraphicsComponents.h
        SHENRemaster/logger.hpp
        SHENRemaster/main.cpp
        SHENRemaster/Mesh.cpp
        SHENRemaster/Mesh.h
        SHENRemaster/Model.cpp
        SHENRemaster/Model.h
        SHENRemaster/PostProcessManager.cpp
        SHENRemaster/PostProcessManager.h
        SHENRemaster/Shader.cpp
        SHENRemaster/Shader.h
        SHENRemaster/ShadowMapHandler.cpp
        SHENRemaster/ShadowMapHandler.h
        SHENRemaster/SkyBoxManager.cpp
        SHENRemaster/SkyBoxManager.h
        SHENRemaster/Texture.cpp
        SHENRemaster/Texture.h
        SHENRemaster/VAO.cpp
        SHENRemaster/VAO.h
        SHENRemaster/VBO.cpp
        SHENRemaster/VBO.h)
